--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 
 layout: home
 title: Home
-banner: "/assets/images/banners/home.jpeg"
+banner: "https://user-images.githubusercontent.com/63712119/146908043-2a16ad32-d7df-4091-9330-aebb6af0ecd3.png"
 ---
